force-app/main/default/objects/Event__c/fields/Number_of_programs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_programs__c</fullName>
    <description>Number of programs</description>
    <label>Number of programs</label>
    <summaryFilterItems>
        <field>Program__c.AccountId__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Program__c.EventId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>