force-app/main/default/objects/Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date of the event</description>
    <inlineHelpText>If you leave this field empty then it will be populated using the program start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>