force-app/main/default/objects/Event__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Theme of the event</description>
    <label>Theme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Art &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Food &amp; Wine</fullName>
            </value>
            <value>
                <fullName>Watch &amp; Jewelry</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Sport &amp; Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>