force-app/main/default/objects/Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Theme of the event</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Theme__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asnières</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Fashion Show Men</fullName>
            </value>
            <value>
                <fullName>Fashion Show Women</fullName>
            </value>
            <value>
                <fullName>Fiesso</fullName>
            </value>
            <value>
                <fullName>Fondation LV</fullName>
            </value>
            <value>
                <fullName>Grasse</fullName>
            </value>
            <value>
                <fullName>La Fabrique du Temps</fullName>
            </value>
            <value>
                <fullName>Maison LVMH</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
            <value>
                <fullName>Social Gathering</fullName>
            </value>
            <value>
                <fullName>Sport &amp; Leasure</fullName>
            </value>
            <value>
                <fullName>Store Opening</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Watch &amp; Jewelry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>