force-app/main/default/objects/Event__c/recordTypes/Business_Event.recordType-meta.xml
<RecordType>
    <fullName>Business_Event</fullName>
    <active>true</active>
    <label>Business Event</label>
</RecordType>