force-app/main/default/objects/Event__c/validationRules/VR_EventTheme.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_EventTheme</fullName>
    <active>true</active>
    <description>Theme of the event is required !!</description>
    <errorConditionFormula>ISBLANK(TEXT(Theme__c))</errorConditionFormula>
    <errorDisplayField>Theme__c</errorDisplayField>
    <errorMessage>&quot;Theme&quot; is required.</errorMessage>
</ValidationRule>