force-app/main/default/objects/Event__c/validationRules/VR_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Level</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Level__c))</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>&apos;Level&apos; is required</errorMessage>
</ValidationRule>