force-app/main/default/objects/Event__c/listViews/All_Events.listView-meta.xml
<ListView>
    <fullName>All_Events</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Level__c</columns>
    <columns>Theme__c</columns>
    <columns>Type__c</columns>
    <columns>Number_of_programs__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Events</label>
</ListView>